data/derived/fa15/progs/unify/prog3366.ml.out
Characters 0-3:
  abs -10
  ^^^
Error: This expression has type int -> int
       but an expression was expected of type int
